--- a/css/_style.scss
+++ b/css/_style.scss
@@ -39,39 +39,52 @@ input[type=range]::-ms-track {
   padding: 2em 0px;
   .logo, .search {
     display: inline-block;
+    @media (max-width: 500px) {
+      img {
+        max-width: 50%;
+        float: left;
+        &:first-child {
+          transform: translateY(50%);
+        }
+      }
+    }
   }
   .search {
     position: relative;
-    float: right;
     form {
-      float: left;
-      position: absolute;
-      top: 50%;
-      left: 0%;
-      transform: translate(-110%, -50%);
+      width: 90%;
+
       height: 40px;
       input {
-        height: 40px;
+        width: 100%;
+        height: 38px;
         border: 0px;
         font-size: 1.2em;
         text-indent: 15px;
         color: grey;
+        @media (max-width: 800px  ) {
+          font-size: 0.8em;
+        }
       }
     }
-    .log {
-      width: 200px;
-      height: 40px;;
-      border-radius: 5px;
-      background-color: $blue;
-      float: right;
-      color: white;
-      text-align: center;
-      p {
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
+  }
+  .log {
+    height: 40px;;
+    border-radius: 5px;
+    background-color: $blue;
+    color: white;
+    text-align: center;
+    p {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+      @media (max-width: 800px) {
+        font-size: 0.9em;
       }
     }
+  }
+  @media (max-width: 768px) {
+
   }
 }
 
@@ -82,6 +95,10 @@ input[type=range]::-ms-track {
 .container-fluid > .row:nth-child(2) {
   background-color: white;
   padding: 0.5em 0px;
+  div:nth-child(2) {
+    text-align: right;
+    padding-right: 15px;
+  }
   p {
     display: inline-block;
     padding: 0px 15px;
@@ -89,8 +106,26 @@ input[type=range]::-ms-track {
       border-left: 1px solid rgba(147, 160, 162, 0.3);
     }
   }
+  #burger {
+    display: none;
+  }
+  @media (max-width: 800px) {
+    p {
+      display: none;
+    }
+    #burger {
+      display: inline-block;
+      height: 25px;
+      padding-left: 2em;
+    }
+  }
   h1 {
     font-size: 1.5em;
+  }
+  @media (max-width: 800px) {
+    h1  {
+      font-size: 1.3em;
+    }
   }
 }
 
@@ -99,27 +134,55 @@ input[type=range]::-ms-track {
 //--------------------------------------------------------------------------
 
 .container-fluid > .row:nth-child(3) {
-  background-image: url("images/image.png");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
+  background-position: top;
+  background-image: url("images/triangles.png");
+  background-color: $blue;
+  position: relative;
+  img {
+    width: 100%;
+    margin-top: 1em;
+  }
   .popup {
-    height: 250px;
-    width: 450px;
+    height: 50%;
+    width: 40%;
     float: right;
     background-color: $blue;
-    margin: 5em 0px 10em 0px;
     border-radius: 10px;
+    position: absolute;
+    top: 20%;
+    right: 0%;
     div {
       position: relative;
-      padding: 3em;
+      padding: 10%;
       height: 100%;
       box-sizing: border-box;
       p, h2 {
         color: white;
+        @media (max-width: 800px) {
+          font-size: 0.8em;
+        }
+        @media (max-width: 600px) {
+          font-size: 0.5em;
+        }
+        @media (max-width: 500px) {
+          font-size: 0.4em;
+        }
       }
       h2 {
         font-size: 2em;
+        @media (max-width: 1000px) {
+          font-size: 1.5em;
+        }
+        @media (max-width: 700px) {
+          font-size: 1em;
+        }
+        @media (max-width: 500px) {
+          font-size: 0.8em;
+        }
+        @media (max-width: 400px) {
+          font-size: 0.6em;
+        }
       }
       button {
         background-color: black;
@@ -127,10 +190,19 @@ input[type=range]::-ms-track {
         border: 0px;
         border-radius: 5px;
         position: absolute;
-        bottom: 3em;
-        width: 170px;
-        height: 40px;
+        bottom: 10%;
+        width: 50%;
+        height: 15%;
         font-size: 1em;
+        @media (max-width: 800px) {
+          font-size: 0.8em;
+        }
+        @media (max-width: 600px) {
+          font-size: 0.6em;
+        }
+        @media (max-width: 420px) {
+          font-size: 0.4em;
+        }
       }
     }
   }
@@ -145,8 +217,31 @@ input[type=range]::-ms-track {
   .cell {
     padding: 5em 0px 3em 1em;
     vertical-align: top;
+    h2 {
+      font-size: 2em;
+    }
+    p {
+      font-size: 1.1em;
+    }
+    @media (max-width: 800px) {
+      h2 {
+        font-size: 1.5em;
+      }
+      p {
+        font-size: 0.9em;
+      }
+    }
+    @media (max-width: 600px) {
+      h2 {
+        font-size: 1.2em;
+      }
+      p {
+        font-size: 0.7em;
+      }
+    }
     &:first-child {
       color: grey;
+      padding-right: 1em;
       div {
         float: left;
         padding: 0.5em;
@@ -162,7 +257,6 @@ input[type=range]::-ms-track {
           font-size: 1.5em;
         }
         h2 {
-          font-size: 2em;
           margin-bottom: 1em;
           color: black;
         }
@@ -171,14 +265,15 @@ input[type=range]::-ms-track {
         }
         &:last-child {
           width: 70%;
+          @media (max-width: 768px) {
+            width: 100%;
+          }
         }
       }
     }
     &:last-child {
       vertical-align: top;
-      h2 {
-        font-size: 2em;
-      }
+      padding-left: 1em;
       h3 {
         display: inline-block;
         float: left;
@@ -310,6 +405,38 @@ input[type=range]::-ms-track {
       input[type=range]:focus::-ms-fill-upper {
         background: #427ebc;
       }
+      @media (max-width: 800px) {
+        input[type=range]::-moz-range-thumb {
+          width: 60px;
+          height: 35px;
+        }
+        input[type=range]::-webkit-slider-thumb {
+          width: 60px;
+          height: 35px;
+        }
+        input[type=range]::-ms-thumb {
+          width: 60px;
+          height: 35px;
+
+        }
+        @media (max-width: 500px) {
+          input[type=range]::-moz-range-thumb {
+            width: 40px;
+            height: 25px;
+            background-size: 40%;
+          }
+          input[type=range]::-webkit-slider-thumb {
+            width: 40px;
+            height: 25px;
+            background-size: 40%;
+          }
+          input[type=range]::-ms-thumb {
+            width: 40px;
+            height: 25px;
+            background-size: 40%;
+          }
+        }
+      }
     }
   }
 }
@@ -324,11 +451,17 @@ input[type=range]::-ms-track {
   color: white;
   div {
     padding: 3em 0px;
+    img {
+      max-width: 35%;
+    }
   }
   h2 {
     font-size: 2.5em;
     padding-top: 1em;
     padding-bottom: 10px;
+  }
+  p {
+    font-size: 1.2em;
   }
   button {
     margin-top: 2em;
@@ -336,6 +469,30 @@ input[type=range]::-ms-track {
     background-color: black;
     border: 0px;
     font-size: 1.5em;
+  }
+  @media (max-width: 1060px) {
+    h2, button {
+      font-size: 2em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+  @media (max-width: 800px) {
+    h2, button  {
+      font-size: 1.5em;
+    }
+    p {
+      font-size: 0.8em;
+    }
+  }
+  @media (max-width: 600px) {
+    h2, button  {
+      font-size: 1em;
+    }
+    p {
+      font-size: 0.5em;
+    }
   }
 }
 
@@ -347,16 +504,31 @@ input[type=range]::-ms-track {
   background-color: white;
   div {
     color: grey;
-    padding: 4em;
+    padding: 2em;
     h2, li {
       padding: 0.5em 0px;
     }
     h2 {
       font-size: 1.5em;
     }
+    @media (max-width: 600px) {
+      h2 {
+        font-size: 1.2em;
+      }
+    }
+    @media (max-width: 500px) {
+      h2 {
+        font-size: 1em;
+      }
+    }
     li {
       list-style-type: square;
       margin-left: 1em;
+    }
+    @media (max-width: 650px) {
+      li {
+        display: none;
+      }
     }
   }
 }
@@ -371,12 +543,17 @@ input[type=range]::-ms-track {
   p {
     padding: 15px 0 0 15px;
   }
+  @media (max-width: 600px) {
+    p {
+      font-size: 0.8em;
+    }
+  }
   div {
     &:first-child {
 
     }
-    &:last-child {
-      text-align: right;
+    &:nth-child(2) {
+      text-align: left;
       p {
         display: inline-block;
         padding-left: 1em;
