--- a/css/_style.scss
+++ b/css/_style.scss
@@ -95,7 +95,8 @@ input[type=range]::-ms-track {
 .container-fluid > .row:nth-child(2) {
   background-color: white;
   padding: 0.5em 0px;
-  div:nth-child(2) {
+  position: relative;
+  &>div:nth-child(2) {
     text-align: right;
     padding-right: 15px;
   }
@@ -110,14 +111,35 @@ input[type=range]::-ms-track {
     display: none;
   }
   @media (max-width: 800px) {
-    p {
+    #menu {
+      margin-top: 15px;
       display: none;
+      position: absolute;
+      top: 130%;
+      left: 2em;
+      z-index: 1000;
+      background-color: $blue;
+      background-repeat: repeat-x;
+      background-position: bottom;
+      background-image: url("images/triangles2.png");
+      border: 2px solid $blue;
+      border-bottom: 0px;
+      border-radius: 5px;
+      p {
+        display: block;
+        padding: 5px 0px;
+        color: white;
+        &:last-child {
+          margin-bottom: 5px;
+        }
+      }
     }
     #burger {
       display: inline-block;
       height: 25px;
       padding-left: 2em;
     }
+
   }
   h1 {
     font-size: 1.5em;
@@ -134,7 +156,7 @@ input[type=range]::-ms-track {
 //--------------------------------------------------------------------------
 
 .container-fluid > .row:nth-child(3) {
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-position: top;
   background-image: url("images/triangles.png");
   background-color: $blue;
