--- a/css/app.css
+++ b/css/app.css
@@ -70,8 +70,9 @@ input[type=range]::-ms-track {
 
 .container-fluid > .row:nth-child(2) {
   background-color: white;
-  padding: 0.5em 0px; }
-  .container-fluid > .row:nth-child(2) div:nth-child(2) {
+  padding: 0.5em 0px;
+  position: relative; }
+  .container-fluid > .row:nth-child(2) > div:nth-child(2) {
     text-align: right;
     padding-right: 15px; }
   .container-fluid > .row:nth-child(2) p {
@@ -82,8 +83,26 @@ input[type=range]::-ms-track {
   .container-fluid > .row:nth-child(2) #burger {
     display: none; }
   @media (max-width: 800px) {
-    .container-fluid > .row:nth-child(2) p {
-      display: none; }
+    .container-fluid > .row:nth-child(2) #menu {
+      margin-top: 15px;
+      display: none;
+      position: absolute;
+      top: 130%;
+      left: 2em;
+      z-index: 1000;
+      background-color: #50c5da;
+      background-repeat: repeat-x;
+      background-position: bottom;
+      background-image: url("images/triangles2.png");
+      border: 2px solid #50c5da;
+      border-bottom: 0px;
+      border-radius: 5px; }
+      .container-fluid > .row:nth-child(2) #menu p {
+        display: block;
+        padding: 5px 0px;
+        color: white; }
+        .container-fluid > .row:nth-child(2) #menu p:last-child {
+          margin-bottom: 5px; }
     .container-fluid > .row:nth-child(2) #burger {
       display: inline-block;
       height: 25px;
@@ -95,7 +114,7 @@ input[type=range]::-ms-track {
       font-size: 1.3em; } }
 
 .container-fluid > .row:nth-child(3) {
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-position: top;
   background-image: url("images/triangles.png");
   background-color: #50c5da;
