--- a/css/_style.scss
+++ b/css/_style.scss
@@ -68,6 +68,9 @@ input[type=range]::-ms-track {
         text-indent: 5px;
         color: grey;
         padding: 0.9rem;
+        @media (max-width: 450px) {
+          padding: 0.7rem;
+        }
       }
     }
   }
@@ -77,6 +80,9 @@ input[type=range]::-ms-track {
     color: white;
     text-align: center;
     padding: 1em;
+    @media (max-width: 450px) {
+      padding: 0.8em;
+    }
   }
 }
 
@@ -442,17 +448,26 @@ input[type=range]::-ms-track {
   div {
     color: grey;
     text-align: left;
+    padding-left: 15px;
     &:nth-child(1) {
       padding-left: 15px;
     }
     &:nth-child(2) {
-      @for $i from 0 through 5 {
-        @media (max-width: 1300px - 200px*$i) {
-          padding: 0px 2em - 0.3em*$i;
+        @media (max-width: 768) {
+          padding-left: 15px;
         }
+    }
+    &:nth-child(3) {
+      padding-left: 15px;
+    }
+    ul {
+      @media (min-width: 768px) {
+        text-align: left;
+      }
+      @media (max-width: 768px) {
+        text-align: center;
       }
     }
-
     h2, li {
       padding: 0.5em 0px;
     }
@@ -460,7 +475,7 @@ input[type=range]::-ms-track {
       list-style-type: square;
       margin-left: 1em;
     }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       li {
         display: none;
       }
