--- a/css/app.css
+++ b/css/app.css
@@ -199,12 +199,18 @@ input[type=range]::-ms-track {
         text-indent: 5px;
         color: grey;
         padding: 0.9rem; }
+        @media (max-width: 450px) {
+          .container-fluid > .row:nth-child(1) .search form input {
+            padding: 0.7rem; } }
   .container-fluid > .row:nth-child(1) .log {
     border-radius: 5px;
     background-color: #50c5da;
     color: white;
     text-align: center;
     padding: 1em; }
+    @media (max-width: 450px) {
+      .container-fluid > .row:nth-child(1) .log {
+        padding: 0.8em; } }
 
 .container-fluid > .row:nth-child(2) {
   background-color: white;
@@ -479,33 +485,27 @@ input[type=range]::-ms-track {
   background-color: white; }
   .container-fluid > .row:nth-child(6) div {
     color: grey;
-    text-align: left; }
+    text-align: left;
+    padding-left: 15px; }
     .container-fluid > .row:nth-child(6) div:nth-child(1) {
       padding-left: 15px; }
-    @media (max-width: 1300px) {
+    @media (max-width: 768) {
       .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 2em; } }
-    @media (max-width: 1100px) {
-      .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 1.7em; } }
-    @media (max-width: 900px) {
-      .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 1.4em; } }
-    @media (max-width: 700px) {
-      .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 1.1em; } }
-    @media (max-width: 500px) {
-      .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 0.8em; } }
-    @media (max-width: 300px) {
-      .container-fluid > .row:nth-child(6) div:nth-child(2) {
-        padding: 0px 0.5em; } }
+        padding-left: 15px; } }
+    .container-fluid > .row:nth-child(6) div:nth-child(3) {
+      padding-left: 15px; }
+    @media (min-width: 768px) {
+      .container-fluid > .row:nth-child(6) div ul {
+        text-align: left; } }
+    @media (max-width: 768px) {
+      .container-fluid > .row:nth-child(6) div ul {
+        text-align: center; } }
     .container-fluid > .row:nth-child(6) div h2, .container-fluid > .row:nth-child(6) div li {
       padding: 0.5em 0px; }
     .container-fluid > .row:nth-child(6) div li {
       list-style-type: square;
       margin-left: 1em; }
-    @media (max-width: 650px) {
+    @media (max-width: 768px) {
       .container-fluid > .row:nth-child(6) div li {
         display: none; } }
 
